<resources>
    <string name="app_name">FromTheScratch</string>
    <string name="item_1">item 1</string>
    <string name="item_2">item 2</string>
    <string name="item_3">item 3</string>
    <string name="my_image">My image</string>
    <string name="andrey_volkov">Andrey Volkov</string>
    <string name="subheader">Subheader</string>
    <string name="all_mail">all mail</string>
    <string name="trash">trash</string>
    <string name="spam">spam</string>
    <string name="open_drawer">Open NavigationDrawer</string>
    <string name="close_drawer">Close NavigationDrawer</string>
</resources>
