<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/item_1"
            android:id="@+id/item1_id"/>
        <item
            android:title="@string/item_2"
            android:id="@+id/item2_id"/>
        <item
            android:title="@string/item_3"
            android:id="@+id/item3_id"/>
    </group>

    <item android:title="@string/subheader">

        <menu>

            <item
                android:title="@string/all_mail"
                android:id="@+id/allMail"/>
            <item
                android:title="@string/trash"
                android:id="@+id/trash"/>
            <item
                android:title="@string/spam"
                android:id="@+id/spam"/>

        </menu>


    </item>

</menu>